2002-08-14  Earnie Boyd  <earnie@users.sf.net>

	* include/shlobj.h (SHGetFolderPath): Add define.
	* lib/shell32.def (SHGetSpecialFolderPath): Add export.
	(SHGetFolderPath): Ditto.

2002-08-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commdlg.h: Don't include COM headers or use
	COM-dependent symbols if __OBJC__.

2002-08-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wincrypt.h (CryptDuplicateHash, CryptDuplicateKey):
	Add prototypes.

2002-08-12  Andriy Palamarchuk  <apa3a@yahoo.com>

	* include/shellapi.h (FOF_NOERRORUI): Add define.

2002-08-12  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/objidl.h (IEnumMoniker): Put 'interface' back.

2002-08-11  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/objidl.h (IEnumMoniker): Correct declaration.

2002-08-09  Mark Schreiber  <mark7@users.sourceforge.net>

	* include/wincrypt.h (CRYPT_NOHASHOID): Add define.

2002-08-09  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commctrl.h: Whitespace change.

2002-08-09  Lars Munch  <lars@segv.dk>

	* include/commctrl.h (tagTVHITTESTINFO): Replace obsolete
	struct name _TVHITTESTINFO and typedefs and add defines for
	backward compatability.
	(ListView_SetExtendedListViewStyleEx): Add macro.

2002-08-05  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wingdi.h (AlphaBlend,GradientFill,TransparentBlt):
	Add prototypes.
	* lib/msimg32.def: New file, with stubs for above.

2002-08-03  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (AddAccessAllowedAceEx,AddAccessDeniedAceEx,
	GetFileSizeEx, SetFilePointerEx): Add prototypes.
	(EncryptFile[AW], FileEncryptionStatus[AW]): Add prototypes
	and UNICODE mappings.

2002-08-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (ReadFileScatter, WriteFileGather):
	Change second parameter to pointer.

2002-07-31  Danny Smith  <dannysmith@users.sourceforge.net>
